feat: align ETL chunking with TokenTextSplitter
Align document ingest chunking and embedding with Spring AI TokenTextSplitter and the same embedding model used by VectorStore retrieval so ingest and search stay consistent.

References:
- [ETL Pipeline](https://docs.spring.io/spring-ai/reference/api/etl-pipeline.html)
- [Embeddings](https://docs.spring.io/spring-ai/reference/api/embeddings.html)

Jira: https://felixzhu.atlassian.net/browse/AI-245
Co-authored-by: Cursor <cursoragent@cursor.com>